[metadata]
name = user
description = user microservice
author = Guri
license = MIT
license_file = LICENSE
platforms = Unix, Linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = find:
install_requires = 
    Flask>=2.0
    SQLAlchemy>=1.0
    psycopg2-binary>=2.0
    Flask-SQLAlchemy>=2.0
    prometheus_flask_exporter>=0.18.4
python_requires = >=3.6
package_dir =
    = src
zip_safe = no

[options.packages.find]
where = src

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]
user = py.typed

[flake81]
max-line-length = 160
ignore = E203, E266, E501, W503
